k8s.yaml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    run: mysql
  name: mysql
spec:
  replicas: 1
  selector:
    run: mysql
  template:
    metadata:
      labels:
        run: mysql
    spec:
      volumes:
      - name: volume-1
        emptyDir: {}
      containers:
      - image: mysql
        name: mysql
        ports:
          - containerPort: 3306
        volumeMounts:
          - name: volume-1
            mountPath: /var/lib/mysql

---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    run: cartoons-rest
  name: cartoons-rest
spec:
  replicas: 1
  selector:
    run: cartoons-rest
  template:
    metadata:
      labels:
        run: cartoons-rest
    spec:
      containers:
      - image: 172.30.1.1:5000/myproject/cartoons-rest
        name: cartoons-rest
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: mysql
  name: mysql
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    run: mysql

---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: cartoons-rest
  name: cartoons-rest
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: cartoons-rest

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    run: cartoons-rest
  name: cartoons-rest
spec:
  host: ""
  tls:
    termination: edge
  to:
    kind: ""
    name: cartoons-rest
